# daoyi-cloud-rs

./: .env.example  .gitignore  Cargo.toml  README.md
daoyi-cloud-api/: Cargo.toml
daoyi-cloud-app/: Cargo.toml
daoyi-cloud-app/src/app/: mod.rs  root_router.rs
daoyi-cloud-biz-demo/: .env  Cargo.toml  README.md
daoyi-cloud-biz-demo/resources/: app.toml
daoyi-cloud-biz-demo/src/: main.rs
daoyi-cloud-biz-demo/src/routers/: mod.rs
daoyi-cloud-biz-demo/src/routers/demos/: auth.rs  user.rs
daoyi-cloud-common/: Cargo.toml
daoyi-cloud-common/src/: error.rs  lib.rs  res.rs
daoyi-cloud-common/src/config/: mod.rs  tenant_config.rs
daoyi-cloud-common/src/constants/: mod.rs  redis_key_constants.rs
daoyi-cloud-common/src/entity/system/: system_dict_type.rs  system_error_code.rs  system_menu_temp.rs  system_notify_message.rs  system_notify_template.rs  system_oauth2_access_token.rs  system_oauth2_client.rs  system_oauth2_code.rs  system_post.rs  system_role.rs  system_sensitive_word.rs  system_sms_channel.rs  system_sms_log.rs  system_social_client.rs  system_social_user.rs  system_social_user_bind.rs  system_tenant_package.rs  system_user_role.rs  system_users.rs
daoyi-cloud-common/src/enums/: data_scope_enum.rs  menu_type_enum.rs  mod.rs  role_type_enum.rs
daoyi-cloud-common/src/models/: mod.rs
daoyi-cloud-common/src/utils/: toml.rs
daoyi-cloud-config/: Cargo.toml
daoyi-cloud-config/src/: lib.rs
daoyi-cloud-config/src/config/: auth_middleware_config.rs  database.rs  db_config.rs  log_config.rs  mod.rs  redis_config.rs  rpc_service_config.rs  security_config.rs  server.rs  tenant_middleware_config.rs
daoyi-cloud-config/src/db/: mod.rs
daoyi-cloud-config/src/redis_util/: mod.rs
daoyi-cloud-demo/: Cargo.toml
daoyi-cloud-demo/resources/: application.yaml.example
daoyi-cloud-demo/sql/: system_users.sql
daoyi-cloud-demo/src/: main.rs
daoyi-cloud-entities/: Cargo.toml
daoyi-cloud-entities/src/entities/: mod.rs
daoyi-cloud-entities/src/entities/system/: mod.rs  prelude.rs  system_dept.rs  system_dict_data.rs  system_dict_type.rs  system_error_code.rs  system_login_log.rs  system_mail_account.rs  system_mail_log.rs  system_mail_template.rs  system_menu.rs  system_menu_temp.rs  system_notice.rs  system_notify_message.rs  system_notify_template.rs  system_oauth2_access_token.rs  system_oauth2_approve.rs  system_oauth2_client.rs  system_oauth2_code.rs  system_oauth2_refresh_token.rs  system_operate_log.rs  system_post.rs  system_role.rs  system_role_menu.rs  system_sensitive_word.rs  system_sms_channel.rs  system_sms_code.rs  system_sms_log.rs  system_sms_template.rs  system_social_client.rs  system_social_user.rs  system_social_user_bind.rs  system_tenant.rs  system_tenant_package.rs  system_user_post.rs  system_user_role.rs  system_users.rs
daoyi-cloud-middleware/: Cargo.toml
daoyi-cloud-middleware/src/: auth_middleware.rs  error_handler_middleware.rs  lib.rs  router_middleware.rs  tenant_middleware.rs
daoyi-cloud-models/: Cargo.toml
daoyi-cloud-models/src/models/: biz_error.rs  common_result.rs  error.rs  mask_utils.rs  mod.rs  page_param.rs  page_result.rs  tree_utils.rs
daoyi-cloud-models/src/models/system/: area_resp_vo.rs  auth_login_req_vo.rs  auth_login_resp_vo.rs  clear_redis_cache_req_vo.rs  dept_list_req_vo.rs  dept_resp_vo.rs  dept_save_req_vo.rs  login_log_page_req_vo.rs  login_log_resp_vo.rs  menu_list_req_vo.rs  menu_resp_vo.rs  menu_save_req_vo.rs  mod.rs  operate_log_page_req_vo.rs  operate_log_resp_vo.rs  permission_assign_role_data_scope_req_vo.rs  permission_check_req_vo.rs  post_page_req_vo.rs  post_resp_vo.rs  post_save_req_vo.rs  role_page_req_vo.rs  role_resp_vo.rs  role_save_req_vo.rs  system_menu.rs  system_oauth2_access_token.rs  system_role.rs  system_role_menu.rs  system_user_role.rs  system_users.rs
daoyi-cloud-server/: Cargo.toml
daoyi-cloud-server/src/app/: mod.rs
daoyi-cloud-server/src/server/: mod.rs
daoyi-cloud-service/: Cargo.toml
daoyi-cloud-service/src/service/: mod.rs
daoyi-cloud-service/src/service/system/: mod.rs  permission_service.rs  system_area_service.rs  system_dept_service.rs  system_login_log_service.rs  system_menu_service.rs  system_oauth2_access_token_service.rs  system_operate_log_service.rs  system_permission_service.rs  system_post_service.rs  system_role_service.rs  system_users_service.rs
daoyi-cloud-system/: .env  Cargo.toml  README.md  config.toml
daoyi-cloud-system/config/: app.toml
daoyi-cloud-system/resources/: app.toml  application.yaml  application.yaml.example
daoyi-cloud-system/src/: error.rs  main.rs
daoyi-cloud-system/src/app/: mod.rs
daoyi-cloud-system/src/config/: db_config.rs  log_config.rs  mod.rs
daoyi-cloud-system/src/hoops/: error_handler.rs  jwt.rs
daoyi-cloud-system/src/models/: common_result.rs
daoyi-cloud-system/src/routers/: auth.rs  mod.rs  permission_api.rs  redis_api.rs  system_area_controller.rs  system_dept_controller.rs  system_login_log_controller.rs  system_menu_controller.rs  system_oauth2_access_token.rs  system_operate_log_controller.rs  system_permission_controller.rs  system_post_controller.rs  system_role_controller.rs  system_users.rs  user.rs
daoyi-cloud-system/src/routers/demos/: auth.rs  demo.rs  mod.rs  user.rs
daoyi-cloud-system/src/utils/: env.rs  mod.rs  toml.rs
daoyi-cloud-utils/: Cargo.toml
daoyi-cloud-utils/src/enums/: common_status_enum.rs  mod.rs  role_code_enum.rs
daoyi-cloud-utils/src/utils/: mod.rs  password_encoder.rs  path_matches.rs  toml.rs
example/daoyi-cloud-demo/: Cargo.toml
example/daoyi-cloud-demo/resources/: application.yaml.example
example/daoyi-cloud-demo/resources/static/: index.html
example/daoyi-cloud-demo/src/: main.rs
example/daoyi-cloud-demo/src/routers/: mod.rs
example/daoyi-cloud-demo/src/web/: mod.rs
lib/daoyi-cloud-api/: Cargo.toml
lib/daoyi-cloud-api/src/api/: mod.rs
lib/daoyi-cloud-common/: Cargo.toml
lib/daoyi-cloud-common/src/: lib.rs
lib/daoyi-cloud-config/: Cargo.toml
lib/daoyi-cloud-server/: Cargo.toml
lib/daoyi-cloud-server/src/: lib.rs
(+147 files in other folders)
