[workspace]
resolver = "3"
members = [
    "lib/*",
    "bin/*",
    "example/*"
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1.45.1", features = ["full"] }
tracing = { version = "0.1.41", features = ["async-await"] }
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter", "chrono"] }
config = { version = "0.15.11", features = ["yaml"] }
serde = { version = "1.0.219", features = ["derive"] }
anyhow = { version = "1.0.98" }
thiserror = { version = "2.0.12" }
sea-orm = { version = "1.2.0-rc.1", features = ["with-chrono", "debug-print", "sqlx-postgres", "sqlx-mysql", "with-rust_decimal", "runtime-tokio", "runtime-tokio-native-tls"] }
num_cpus = { version = "1.17.0" }
daoyi-cloud-logger = { path = "lib/daoyi-cloud-logger", version = "0.1.0" }
daoyi-cloud-config = { path = "lib/daoyi-cloud-config", version = "0.1.0" }
daoyi-cloud-entity = { path = "lib/daoyi-cloud-entity", version = "0.1.0" }
daoyi-cloud-server = { path = "lib/daoyi-cloud-server", version = "0.1.0" }
daoyi-cloud-api = { path = "lib/daoyi-cloud-api", version = "0.1.0" }
daoyi-cloud-common = { path = "lib/daoyi-cloud-common", version = "0.1.0" }

