[package]
name = "daoyi-cloud-app"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true
repository.workspace = true

[dependencies]
salvo = { workspace = true, features = ["full"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
daoyi-cloud-models = {workspace = true}
daoyi-cloud-config = {workspace = true}
daoyi-cloud-hoops = {workspace = true}