[package]
name = "daoyi-cloud-biz-demo"
version = { workspace = true}
edition = {workspace = true}
rust-version = {workspace = true}
readme = "./README.md"

[dependencies]
anyhow = { workspace = true }
salvo = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
validator = { workspace = true, features = ["derive"] }
ulid = { workspace = true }
cookie = { workspace = true }
sea-orm = { workspace = true, features = ["runtime-tokio-native-tls", "sqlx-mysql", "macros"] }
daoyi-cloud-entities = { workspace = true }
daoyi-cloud-common = { workspace = true }
daoyi-cloud-app = { workspace = true }
daoyi-cloud-models = { workspace = true }
daoyi-cloud-config = { workspace = true }
daoyi-cloud-hoops = { workspace = true }
