[package]
name = "daoyi-cloud-common"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
spring = { workspace = true }
spring-web = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sea-orm = { workspace = true }