[package]
name = "daoyi-cloud-config"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["std", "fmt", "env-filter", "tracing-log", "time", "local-time", "json"] }
daoyi-cloud-utils = { workspace = true }
time = { workspace = true }
sea-orm = { workspace = true, features = ["runtime-tokio-native-tls", "sqlx-mysql"] }