[package]
name = "daoyi-cloud-demo"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
sea-orm = { workspace = true }
daoyi-cloud-entity = { workspace = true }
daoyi-cloud-logger = { workspace = true }
daoyi-cloud-config = { workspace = true }