[package]
name = "daoyi-cloud-entities"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true
repository.workspace = true

[dependencies]
sea-orm = { workspace = true, features = ["runtime-tokio-native-tls", "sqlx-mysql"] }
serde = { workspace = true }