[package]
name = "daoyi-cloud-models"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true
repository.workspace = true

[dependencies]
salvo = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
sea-orm = { workspace = true, features = ["runtime-tokio-native-tls", "sqlx-mysql"] }
tokio = { workspace = true, features = ["full"] }
validator = { workspace = true, features = ["derive"] }
toml = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
daoyi-cloud-entities = { workspace = true }