[package]
name = "daoyi-cloud-server"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
sea-orm = { workspace = true }
daoyi-cloud-config = { workspace = true }
daoyi-cloud-logger = { workspace = true }