[package]
name = "daoyi-cloud-service"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true
repository.workspace = true

[dependencies]
daoyi-cloud-models = { workspace = true }
daoyi-cloud-entities = { workspace = true }
daoyi-cloud-config = { workspace = true }
sea-orm = { workspace = true, features = ["runtime-tokio-native-tls", "sqlx-mysql", "macros"] }
salvo = { workspace = true, features = ["full"] }
chrono = { workspace = true }
serde_json = { workspace = true }
daoyi-cloud-common = { workspace = true }
itertools = { workspace = true }
csv = { workspace = true }