[package]
name = "daoyi-cloud-system"
version = { workspace = true}
edition = {workspace = true}
rust-version = {workspace = true}
readme = "./README.md"

[dependencies]
salvo = { workspace = true, features = ["full"] }
tokio = { workspace = true, features = ["full"] }
daoyi-cloud-app = { workspace = true }
daoyi-cloud-models = { workspace = true }
daoyi-cloud-config = { workspace = true }
daoyi-cloud-service = { workspace = true }
daoyi-cloud-utils = { workspace = true }
daoyi-cloud-hoops = { workspace = true }
