[package]
name = "daoyi-cloud-utils"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true
repository.workspace = true

[dependencies]
argon2 = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
daoyi-cloud-models = { workspace = true }
dotenvy = { workspace = true }
wax = { workspace = true }