[package]
name = "daoyi-cloud-demo"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
rust-embed = { workspace = true }
tower-http = { workspace = true }
openssl-sys = { workspace = true }
daoyi-cloud-common = { workspace = true }
daoyi-cloud-server = { workspace = true }
daoyi-cloud-api = { workspace = true }