[package]
name = "daoyi-cloud-api"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { workspace = true }
anyhow = { workspace = true }
sea-orm = { workspace = true }
tracing = { workspace = true }
daoyi-cloud-common = { workspace = true }
daoyi-cloud-config = { workspace = true }
daoyi-cloud-logger = { workspace = true }
daoyi-cloud-entity = { workspace = true }