[package]
name = "daoyi-cloud-common"
version.workspace = true
edition.workspace = true

[dependencies]
sea-orm = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
validator = { workspace = true }
strum = { workspace = true }
axum-valid = { workspace = true }
#tracing = { workspace = true }